fix Wave extension errors, alerts and contrast

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -47,7 +47,7 @@ input[type="text"] {
 
 /* Button style for adding tasks */
 button[type="submit"] {
-  background-color: #55aa55;
+  background-color: #1b8125;
   color: #fff;
   border: none;
   padding: 10px;
@@ -57,10 +57,12 @@ button[type="submit"] {
   display: block; 
   width: 20%;
   text-align: center;
+  // border: solid 2px #27ca37;
 }
+
 /* Button hover effect */
 button[type="submit"]:hover {
-  background-color: #339933;
+  background-color: #1a8e1a;
 }
 
 /* Container for Todo component */
@@ -88,12 +90,18 @@ li {
 input[type="checkbox"] {
   margin-right: 10px;
 }
+// Checkbox checked
 .completed {
   text-decoration: line-through;
+  color: gray;
+}
+fieldset {
+  border: none;
+  padding: 0;
 }
 /* Button style for deleting tasks in Todo */
 button {
-  background-color: #ff5555;
+  background-color: #c32f2f;
   color: #fff;
   border: none;
   padding: 5px 10px;
@@ -103,7 +111,7 @@ button {
   margin-right: 1%;
 }
 .edit-btn {
-  background-color: #007bff;
+  background-color: #2973c2;
 }
 .edit-btn:hover {
   background-color: #24578d;
